fixed style issue on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -358,4 +358,8 @@ div.custom-navbar .icons a {
   #hide-on-small {
     display: none;
   }
+  .two-column-container-projects {
+    padding-left: 20px; /* Adjust the padding value as needed */
+    padding-right: 20px;
+  }
 }
